<resources>
    <string name="app_name">FoodDelivery</string>
    <string name="SingIN">Sing In</string>
    <string name="CreateAc">Create Account</string>
    <string name="loginTitle">Food Delivery</string>
    <string name="incorrectInput">Incorrect Input</string>
    <string name="errorSign">Sign in error</string>
    <string name="errorCreateAcc">Create Acc error</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="DrawerHeader">Food Delivery</string>
    <string name="DrawerText">Greet YOU!</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="basket">Basket</string>
    <string name="help">Help</string>
    <string name="addDelish">Добавить в корзину</string>
    <string name="menuPizza">Пицца</string>
    <string name="menuWater">Напитки</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
