<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawerMenu"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/menu" />
        <item
            android:id="@+id/basket"
            android:icon="@drawable/ic_shopping_basket_black_24dp"
            android:title="@string/basket" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout_black_36dp"
            android:title="LogOut"
            />




        </group>

</menu>
