<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rednone.fooddelivery.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="370dp"
            android:layout_height="190dp"
            android:layout_margin="15dp"
            android:elevation="1dp"
            app:srcCompat="@drawable/delivery" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/loginTitle"
            android:textSize="36sp" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="159dp"
                android:layout_height="42dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:text="Vasilevichnikolai@gmail.com"
                tools:text="Vasilevichnikolai@gmail.com" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:hint="Password"
                android:inputType="textPassword"
                android:text="16935253452667"
                tools:text="16935253452667" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/conteiner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="54dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSign"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="0.28"
                android:background="@color/colorAccent"
                android:text="@string/SingIN"
                android:textColor="@android:color/background_light"
                android:textColorLink="@color/colorAccent" />

            <Button
                android:id="@+id/buttonCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="0.26"
                android:background="@color/colorAccent"
                android:text="@string/CreateAc"
                android:textColor="@android:color/background_light"
                android:textColorLink="@android:color/background_light" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
